--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
-.scroll-handle, .button, .button-expand {
+.scroll-handle, .button {
   cursor: pointer;
 }
 
@@ -1003,7 +1003,7 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -2px 0px 4px 0px;
 }
 
-.shadow-3, .button, .button-expand {
+.shadow-3, .button {
   box-shadow: gray 0px 0px 5px 0px;
 }
 
@@ -1043,7 +1043,7 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -4px 0px 6px 0px;
 }
 
-.shadow-5, .button:hover, .button-expand:hover {
+.shadow-5, .button:hover {
   box-shadow: gray 0px 0px 7px 0px;
 }
 
@@ -1103,7 +1103,7 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -2px 0px 4px 0px inset;
 }
 
-.shadow-inset-3, .button.active, .button:active, .active.button-expand, .button-expand:active {
+.shadow-inset-3, .button.active, .button:active {
   box-shadow: gray 0px 0px 5px 0px inset;
 }
 
@@ -1143,7 +1143,7 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -4px 0px 6px 0px inset;
 }
 
-.shadow-inset-5, .button:hover.active, .button-expand:hover.active {
+.shadow-inset-5, .button:hover.active {
   box-shadow: gray 0px 0px 7px 0px inset;
 }
 
@@ -1234,47 +1234,36 @@ h4.dark, .h4-text.dark {
     background-position: 0% 0%;
   }
 }
-.button, .button-expand {
+.button {
   border: 0px;
   border-radius: 0.25em;
-  width: 5em;
-  height: 5em;
 }
 .button-expand {
-  position: relative;
   animation: animation-shrink 0.2s ease forwards;
+}
+.button-expand * {
+  height: 100%;
+  width: 100%;
 }
 
 .button-expand:hover {
   animation: animation-expand 0.2s ease forwards;
 }
 
-@keyframes animation-expand {
-  0% {
-    width: 5em;
-    height: 5em;
-    top: 0em;
-    left: 0em;
-  }
-  100% {
-    width: 7em;
-    height: 7em;
-    top: -1em;
-    left: -1em;
-  }
-}
 @keyframes animation-shrink {
   0% {
-    width: 7em;
-    height: 7em;
-    top: -1em;
-    left: -1em;
+    padding: 0em;
   }
   100% {
-    width: 5em;
-    height: 5em;
-    top: 0em;
-    left: 0em;
+    padding: 1em;
+  }
+}
+@keyframes animation-expand {
+  0% {
+    padding: 1em;
+  }
+  100% {
+    padding: 0em;
   }
 }
 .link {
