--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -7,42 +7,71 @@
     @extend %clickable;
     @include variables.border-radius();
 
+    min-width: 2em;
+    min-height: 2em;
+
     &.active {
+        @extend .shadow-inset-3;
+
+        &:hover {
+            @extend .shadow-inset-5;
+        }
+    }
+
+    &:hover {
+        @extend .shadow-5;
+
+        &.active {
+            @extend .shadow-inset-5;
+        }
+    }
+
+    &:active {
         @extend .shadow-inset-3;
     }
 }
 
-.button:hover {
-    @extend .shadow-5;
+@each $value in 1, 2, 3 {
+    .button-expand-#{$value} {
+        width: min-content;
+        height: min-content;
+        padding: $value * 0.5em;
 
-    &.active {
-        @extend .shadow-inset-5;
+        // animation: animation-shrink-outer-#{$value} 0.2s ease forwards;
+
+        > * { 
+            height: 100%;
+            width: 100%;
+            animation: animation-shrink-#{$value} 0.2s ease forwards;
+        } 
+    
+        &:hover {
+
+            // animation: animation-expand-outer-#{$value} 0.2s ease forwards;
+
+            > * { 
+                animation: animation-expand-#{$value} 0.2s ease forwards;
+            } 
+        }
     }
-}
+    
+    @keyframes animation-expand-#{$value} {
+        0%{margin-top: 0em; margin-left: 0em; width: 100%;}
+        100%{margin-top: $value * -0.5em; margin-left: $value * -0.5em; width: calc(100% + #{$value * 1em});}
+    }
+    
+    @keyframes animation-shrink-#{$value} {
+        0%{margin-top: $value * -0.5em; margin-left: $value * -0.5em; width: calc(100% + #{$value * 1em});}
+        100%{margin-top: 0em; margin-left: 0em; width: 100%;}
+    }
 
-.button:active {
-    @extend .shadow-inset-3;
-}
-
-.button-expand {
-    animation: animation-shrink 0.2s ease forwards;
-
-    * { 
-        height: 100%;
-        width: 100%;
-    } 
-}
-
-.button-expand:hover {
-    animation: animation-expand 0.2s ease forwards;
-}
-
-@keyframes animation-shrink {
-    0%{padding: 0em;}
-    100%{padding: 1em;}
-}
-
-@keyframes animation-expand {
-    0%{padding: 1em;}
-    100%{padding: 0em;}
+    // @keyframes animation-expand-outer-#{$value} {
+    //     0%{padding: $value * 0.5em;}
+    //     100%{padding: 0em;}
+    // }
+    
+    // @keyframes animation-shrink-outer-#{$value} {
+    //     0%{padding: 0em;}
+    //     100%{padding: $value * 0.5em;}
+    // }
 }
