--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1143,7 +1143,7 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -4px 0px 6px 0px inset;
 }
 
-.shadow-inset-5, .button:hover.active {
+.shadow-inset-5, .button.active:hover {
   box-shadow: gray 0px 0px 7px 0px inset;
 }
 
@@ -1237,33 +1237,121 @@ h4.dark, .h4-text.dark {
 .button {
   border: 0px;
   border-radius: 0.25em;
+  min-width: 2em;
+  min-height: 2em;
 }
-.button-expand {
-  animation: animation-shrink 0.2s ease forwards;
+.button-expand-1 {
+  width: min-content;
+  height: min-content;
+  padding: 0.5em;
 }
-.button-expand * {
+.button-expand-1 > * {
   height: 100%;
   width: 100%;
+  animation: animation-shrink-1 0.2s ease forwards;
+}
+.button-expand-1:hover > * {
+  animation: animation-expand-1 0.2s ease forwards;
 }
 
-.button-expand:hover {
-  animation: animation-expand 0.2s ease forwards;
+@keyframes animation-expand-1 {
+  0% {
+    margin-top: 0em;
+    margin-left: 0em;
+    width: 100%;
+  }
+  100% {
+    margin-top: -0.5em;
+    margin-left: -0.5em;
+    width: calc(100% + 1em);
+  }
+}
+@keyframes animation-shrink-1 {
+  0% {
+    margin-top: -0.5em;
+    margin-left: -0.5em;
+    width: calc(100% + 1em);
+  }
+  100% {
+    margin-top: 0em;
+    margin-left: 0em;
+    width: 100%;
+  }
+}
+.button-expand-2 {
+  width: min-content;
+  height: min-content;
+  padding: 1em;
+}
+.button-expand-2 > * {
+  height: 100%;
+  width: 100%;
+  animation: animation-shrink-2 0.2s ease forwards;
+}
+.button-expand-2:hover > * {
+  animation: animation-expand-2 0.2s ease forwards;
 }
 
-@keyframes animation-shrink {
+@keyframes animation-expand-2 {
   0% {
-    padding: 0em;
+    margin-top: 0em;
+    margin-left: 0em;
+    width: 100%;
   }
   100% {
-    padding: 1em;
+    margin-top: -1em;
+    margin-left: -1em;
+    width: calc(100% + 2em);
   }
 }
-@keyframes animation-expand {
+@keyframes animation-shrink-2 {
   0% {
-    padding: 1em;
+    margin-top: -1em;
+    margin-left: -1em;
+    width: calc(100% + 2em);
   }
   100% {
-    padding: 0em;
+    margin-top: 0em;
+    margin-left: 0em;
+    width: 100%;
+  }
+}
+.button-expand-3 {
+  width: min-content;
+  height: min-content;
+  padding: 1.5em;
+}
+.button-expand-3 > * {
+  height: 100%;
+  width: 100%;
+  animation: animation-shrink-3 0.2s ease forwards;
+}
+.button-expand-3:hover > * {
+  animation: animation-expand-3 0.2s ease forwards;
+}
+
+@keyframes animation-expand-3 {
+  0% {
+    margin-top: 0em;
+    margin-left: 0em;
+    width: 100%;
+  }
+  100% {
+    margin-top: -1.5em;
+    margin-left: -1.5em;
+    width: calc(100% + 3em);
+  }
+}
+@keyframes animation-shrink-3 {
+  0% {
+    margin-top: -1.5em;
+    margin-left: -1.5em;
+    width: calc(100% + 3em);
+  }
+  100% {
+    margin-top: 0em;
+    margin-left: 0em;
+    width: 100%;
   }
 }
 .link {
