--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -11,6 +11,7 @@
 
     min-width: 2em;
     min-height: 2em;
+    padding: 0.5em;
 
     &.active {
         @extend .shadow-inset-3;
@@ -44,11 +45,19 @@
         
         > * { 
             animation: animation-shrink-#{$value} 0.2s ease forwards;
+
+            &.gradient-hover-animation {
+                animation: animation-shrink-gradient-#{$value} 0.2s ease forwards;
+            }
         } 
     
         &:hover {
             > * { 
                 animation: animation-expand-#{$value} 0.2s ease forwards;
+
+                &.gradient-hover-animation {
+                    animation: animation-expand-gradient-#{$value} 0.2s ease forwards;
+                }
             } 
         }
     }
@@ -61,5 +70,15 @@
     @keyframes animation-shrink-#{$value} {
         0%{margin: #{$value * -0.5em}; padding: #{$value * 0.5em * 2};}
         100%{margin: 0em; padding: #{$value * 0.5em};}
+    }
+
+    @keyframes animation-expand-gradient-#{$value} {
+        0%{margin: 0em; padding: #{$value * 0.5em}; background-position: 0% 0%;}
+        100%{margin: #{$value * -0.5em}; padding: #{$value * 0.5em * 2}; background-position: 100% 100%;}
+    }
+    
+    @keyframes animation-shrink-gradient-#{$value} {
+        0%{margin: #{$value * -0.5em}; padding: #{$value * 0.5em * 2}; background-position: 100% 100%;}
+        100%{margin: 0em; padding: #{$value * 0.5em}; background-position: 0% 0%;}
     }
 }
