--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -7,7 +7,7 @@
     font-weight: $weight;
 
     &.dark {
-        color: variables.$secondary-text;
+        color: variables.$primary-text-dark;
     }
 }
 
