--- a/scss/_gradients.scss
+++ b/scss/_gradients.scss
@@ -1,22 +1,35 @@
+@use 'variables';
 
-.gradient {
-    background: linear-gradient(135deg, #ffffff00, #e9e9e980 25%, #ffffff00);
-
-    &.dark {
-        background: linear-gradient(135deg, #ffffff00, #161616 25%, #ffffff00);
-    }
+%gradient {
+    background: linear-gradient(135deg, variables.$alpha, variables.$secondary 25%, variables.$alpha);
 }
 
-.gradient-hover-animation {
-    @extend .gradient;
+%gradient-dark {
+    background: linear-gradient(135deg, variables.$alpha-dark, variables.$secondary-dark 25%, variables.$alpha-dark);
+}
+
+%gradient-hover-animation {
+    @extend %gradient;
     background-size: 200% 200%;
     -webkit-animation: animation-back 0.2s ease forwards;
     -moz-animation: animation-back 0.2s ease forwards;
     animation: animation-back 0.2s ease forwards;
+}
 
-    &.dark {
-        background-size: 200% 200%;
-    }
+%gradient-hover-animation-dark {
+    @extend %gradient-dark;
+    background-size: 200% 200%;
+    -webkit-animation: animation-back 0.2s ease forwards;
+    -moz-animation: animation-back 0.2s ease forwards;
+    animation: animation-back 0.2s ease forwards;
+}
+
+.gradient {
+    @extend %gradient;
+}
+
+.gradient-hover-animation {
+    @extend %gradient-hover-animation;
 }
 
 .gradient-hover-animation:hover {
