--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -1,6 +1,25 @@
 @use 'layout';
 @use 'offsets';
 
+
+%link-dark {
+    background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
+    color: rgb(195, 195, 195);
+    background-size: 200% 200%;
+    transition: margin 0.2s, width 0.2s, height 0.2s;
+    -webkit-animation: animation-back 0.2s ease forwards;
+    -moz-animation: animation-back 0.2s ease forwards;
+    animation: animation-back 0.2s ease forwards;
+
+    &:hover {
+        color: white;
+        transition: width 0.2s, height 0.2s;
+        -webkit-animation: animation-forward 0.2s ease forwards;
+        -moz-animation: animation-forward 0.2s ease forwards;
+        animation: animation-forward 0.2s ease forwards;
+    } 
+}
+
 .link-row {
     @extend .flex;
 
@@ -37,24 +56,6 @@
         -webkit-animation: animation-forward 0.2s ease forwards;
         -moz-animation: animation-forward 0.2s ease forwards;
         animation: animation-forward 0.2s ease forwards;
-    }
-
-    &.dark {
-        background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
-        color: rgb(195, 195, 195);
-        background-size: 200% 200%;
-        transition: margin 0.2s, width 0.2s, height 0.2s;
-        -webkit-animation: animation-back 0.2s ease forwards;
-        -moz-animation: animation-back 0.2s ease forwards;
-        animation: animation-back 0.2s ease forwards;
-
-        &:hover {
-            color: white;
-            transition: width 0.2s, height 0.2s;
-            -webkit-animation: animation-forward 0.2s ease forwards;
-            -moz-animation: animation-forward 0.2s ease forwards;
-            animation: animation-forward 0.2s ease forwards;
-        }
     }
 }
 
