--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -776,18 +776,12 @@ p, .text, .link {
   color: #000000;
   font-weight: normal;
 }
-p.dark, .text.dark, .link.dark {
-  color: white;
-}
 
 h1, .h1-text {
   font-size: 3.5rem;
   margin: 0.5em 0em;
   color: #000000;
   font-weight: normal;
-}
-h1.dark, .h1-text.dark {
-  color: white;
 }
 
 h2, .h2-text {
@@ -796,9 +790,6 @@ h2, .h2-text {
   color: #000000;
   font-weight: normal;
 }
-h2.dark, .h2-text.dark {
-  color: white;
-}
 
 h3, .h3-text {
   font-size: 1.75rem;
@@ -806,18 +797,12 @@ h3, .h3-text {
   color: #000000;
   font-weight: normal;
 }
-h3.dark, .h3-text.dark {
-  color: white;
-}
 
 h4, .h4-text {
   font-size: 1.25rem;
   margin: 0.5em 0em;
   color: #000000;
   font-weight: normal;
-}
-h4.dark, .h4-text.dark {
-  color: white;
 }
 
 @media screen and (max-width: 1200px) {
@@ -827,18 +812,12 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  p.dark, .text.dark, .link.dark {
-    color: white;
-  }
 
   h1, .h1-text {
     font-size: 3.15rem;
     margin: 0.5em 0em;
     color: #000000;
     font-weight: normal;
-  }
-  h1.dark, .h1-text.dark {
-    color: white;
   }
 
   h2, .h2-text {
@@ -847,9 +826,6 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  h2.dark, .h2-text.dark {
-    color: white;
-  }
 
   h3, .h3-text {
     font-size: 1.575rem;
@@ -857,18 +833,12 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  h3.dark, .h3-text.dark {
-    color: white;
-  }
 
   h4, .h4-text {
     font-size: 1.125rem;
     margin: 0.5em 0em;
     color: #000000;
     font-weight: normal;
-  }
-  h4.dark, .h4-text.dark {
-    color: white;
   }
 }
 @media screen and (max-width: 900px) {
@@ -878,18 +848,12 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  p.dark, .text.dark, .link.dark {
-    color: white;
-  }
 
   h1, .h1-text {
     font-size: 2.625rem;
     margin: 0.5em 0em;
     color: #000000;
     font-weight: normal;
-  }
-  h1.dark, .h1-text.dark {
-    color: white;
   }
 
   h2, .h2-text {
@@ -898,9 +862,6 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  h2.dark, .h2-text.dark {
-    color: white;
-  }
 
   h3, .h3-text {
     font-size: 1.3125rem;
@@ -908,18 +869,12 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  h3.dark, .h3-text.dark {
-    color: white;
-  }
 
   h4, .h4-text {
     font-size: 0.9375rem;
     margin: 0.5em 0em;
     color: #000000;
     font-weight: normal;
-  }
-  h4.dark, .h4-text.dark {
-    color: white;
   }
 }
 @media screen and (max-width: 600px) {
@@ -929,18 +884,12 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  p.dark, .text.dark, .link.dark {
-    color: white;
-  }
 
   h1, .h1-text {
     font-size: 1.75rem;
     margin: 0.5em 0em;
     color: #000000;
     font-weight: normal;
-  }
-  h1.dark, .h1-text.dark {
-    color: white;
   }
 
   h2, .h2-text {
@@ -949,9 +898,6 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  h2.dark, .h2-text.dark {
-    color: white;
-  }
 
   h3, .h3-text {
     font-size: 0.875rem;
@@ -959,18 +905,12 @@ h4.dark, .h4-text.dark {
     color: #000000;
     font-weight: normal;
   }
-  h3.dark, .h3-text.dark {
-    color: white;
-  }
 
   h4, .h4-text {
     font-size: 0.625rem;
     margin: 0.5em 0em;
     color: #000000;
     font-weight: normal;
-  }
-  h4.dark, .h4-text.dark {
-    color: white;
   }
 }
 .shadow-1 {
@@ -1173,24 +1113,29 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -5px 0px 7px 0px inset;
 }
 
-.gradient, .gradient-hover-animation {
-  background: linear-gradient(135deg, #ffffff00, #e9e9e980 25%, #ffffff00);
-}
-.gradient.dark, .dark.gradient-hover-animation {
-  background: linear-gradient(135deg, #ffffff00, #161616 25%, #ffffff00);
+.gradient, .bg-primary *.gradient, .gradient-hover-animation, .bg-primary *.gradient-hover-animation, .bg-primary.dark .gradient-hover-animation:not(.bg-primary) {
+  background: linear-gradient(135deg, #ffffff00, #d7d7d7 25%, #ffffff00);
 }
 
-.gradient-hover-animation {
+.bg-primary.dark *.gradient:not(.bg-primary), .bg-primary.dark *.gradient-hover-animation:not(.bg-primary) {
+  background: linear-gradient(135deg, #00000000, #282828 25%, #00000000);
+}
+
+.gradient-hover-animation, .bg-primary *.gradient-hover-animation, .bg-primary.dark .gradient-hover-animation:not(.bg-primary) {
   background-size: 200% 200%;
   -webkit-animation: animation-back 0.2s ease forwards;
   -moz-animation: animation-back 0.2s ease forwards;
   animation: animation-back 0.2s ease forwards;
 }
-.gradient-hover-animation.dark {
+
+.bg-primary.dark *.gradient-hover-animation:not(.bg-primary) {
   background-size: 200% 200%;
+  -webkit-animation: animation-back 0.2s ease forwards;
+  -moz-animation: animation-back 0.2s ease forwards;
+  animation: animation-back 0.2s ease forwards;
 }
 
-.gradient-hover-animation:hover {
+.gradient-hover-animation:hover, .bg-primary.dark .gradient-hover-animation:hover:not(.bg-primary) {
   -webkit-animation: animation-forward 0.2s ease forwards;
   -moz-animation: animation-forward 0.2s ease forwards;
   animation: animation-forward 0.2s ease forwards;
@@ -1426,7 +1371,24 @@ h4.dark, .h4-text.dark {
     background-position: 0% 0%;
   }
 }
-.link {
+.bg-primary.dark *.link:not(.bg-primary) {
+  background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
+  color: #c3c3c3;
+  background-size: 200% 200%;
+  transition: margin 0.2s, width 0.2s, height 0.2s;
+  -webkit-animation: animation-back 0.2s ease forwards;
+  -moz-animation: animation-back 0.2s ease forwards;
+  animation: animation-back 0.2s ease forwards;
+}
+.bg-primary.dark .link:hover:not(.bg-primary) {
+  color: white;
+  transition: width 0.2s, height 0.2s;
+  -webkit-animation: animation-forward 0.2s ease forwards;
+  -moz-animation: animation-forward 0.2s ease forwards;
+  animation: animation-forward 0.2s ease forwards;
+}
+
+.link, .bg-primary *.link {
   padding: 0.25em;
   min-width: 5em;
   text-align: center;
@@ -1451,22 +1413,6 @@ h4.dark, .h4-text.dark {
   -moz-animation: animation-forward 0.2s ease forwards;
   animation: animation-forward 0.2s ease forwards;
 }
-.link.dark {
-  background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
-  color: #c3c3c3;
-  background-size: 200% 200%;
-  transition: margin 0.2s, width 0.2s, height 0.2s;
-  -webkit-animation: animation-back 0.2s ease forwards;
-  -moz-animation: animation-back 0.2s ease forwards;
-  animation: animation-back 0.2s ease forwards;
-}
-.link.dark:hover {
-  color: white;
-  transition: width 0.2s, height 0.2s;
-  -webkit-animation: animation-forward 0.2s ease forwards;
-  -moz-animation: animation-forward 0.2s ease forwards;
-  animation: animation-forward 0.2s ease forwards;
-}
 
 .link-bar {
   cursor: pointer;
@@ -1484,19 +1430,18 @@ h4.dark, .h4-text.dark {
   background: #16161680;
 }
 
-.bg-primary {
-  background: #fafafa;
-}
-.bg-primary.transparent {
-  background: rgba(250, 250, 250, 0.9);
-}
-.bg-primary.dark {
-  background: #050505;
-}
-.bg-primary.dark.transparent {
-  background: rgba(5, 5, 5, 0.9);
+.bg-primary.dark *.transparent:not(.bg-primary) {
+  background-color: rgba(8, 8, 8, 0.9);
 }
 
+.bg-primary {
+  background-color: #f7f7f7;
+  color: #000000;
+}
+.bg-primary.dark {
+  background-color: #080808;
+  color: white;
+}
 * {
   box-sizing: border-box;
 }
@@ -1513,7 +1458,6 @@ body {
   height: 100%;
   min-height: 100%;
   margin: 0px;
-  background: #fafafa;
 }
 
 .container {
