--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -19,9 +19,7 @@
 }
 
 .flex, .center {
-    @include flex(column, center, center);
-    width: 100%;
-    height: 100%;
+    @include flex(column, center, center, 0);
 }
 
 .flex-column {
