--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1437,14 +1437,11 @@ h4, .h4-text {
   background-color: rgba(8, 8, 8, 0.7);
 }
 
-body, .primary {
+.primary {
   background-color: #f7f7f7;
   color: #000000;
 }
-body *, .primary * {
-  color: #000000;
-}
-body.transparent, .primary.transparent {
+.primary.transparent {
   background-color: rgba(247, 247, 247, 0.7);
 }
 
@@ -1466,7 +1463,6 @@ html {
   height: 100%;
   font-family: "Century Gothic", Arial, sans-serif;
   font-size: 1rem;
-  background-color: black;
 }
 
 body {
