--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,4 +1,5 @@
 @use 'variables';
+@use 'shadow';
 
 @mixin flex($direction, $justify, $align, $grow: 1) {
     display: flex;
@@ -122,4 +123,20 @@
     .flex-grow-#{$value} {
         flex-grow: #{$value};
     }
+}
+
+.box {
+    @extend .flex;
+    @extend .shadow-1;
+    min-width: 5em;
+    min-height: 5em;
+    border-radius: 3px;
+}
+
+.inline-box {
+    @extend .flex;
+    @extend .shadow-1;
+    min-width: 5em;
+    min-height: fit-content;
+    border-radius: 3px;
 }
