--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -1,29 +1,36 @@
 @use 'layout';
 @use 'offsets';
+@use 'gradients';
 
+%link {
+    @extend .inline-box;
+    @extend .gradient-hover-animation;
+    padding: 0.25em;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(60, 60, 60);
+    cursor: pointer;
+
+    &:hover {
+        color: black;
+        text-decoration: none;
+    }
+}
 
 %link-dark {
-    background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
+    @extend %link;
+    @extend %gradient-hover-animation-dark;
     color: rgb(195, 195, 195);
-    background-size: 200% 200%;
-    transition: margin 0.2s, width 0.2s, height 0.2s;
-    -webkit-animation: animation-back 0.2s ease forwards;
-    -moz-animation: animation-back 0.2s ease forwards;
-    animation: animation-back 0.2s ease forwards;
 
     &:hover {
         color: white;
-        transition: width 0.2s, height 0.2s;
-        -webkit-animation: animation-forward 0.2s ease forwards;
-        -moz-animation: animation-forward 0.2s ease forwards;
-        animation: animation-forward 0.2s ease forwards;
     } 
 }
 
 .link-row {
     @extend .flex;
 
-    & * {
+    * {
         @extend .margin-horizontal-s;
     }
 }
@@ -33,30 +40,7 @@
 }
 
 .link {
-    padding: 0.25em;
-    min-width: 5em;
-    text-align: center;
-    border-radius: 3px;
-    margin-top: 0.5em;
-    text-decoration: none;
-    color: rgb(60, 60, 60);
-    cursor: pointer;
-    background: linear-gradient(135deg, #ffffff00, #e9e9e980 25%, #ffffff00);
-    box-shadow: #999 0px 0px 3px 0px;
-    background-size: 200% 200%;
-    transition: width 0.2s, height 0.2s;
-    -webkit-animation: animation-back 0.2s ease forwards;
-    -moz-animation: animation-back 0.2s ease forwards;
-    animation: animation-back 0.2s ease forwards;
-
-    &:hover {
-        color: black;
-        text-decoration: none;
-        transition: width 0.2s, height 0.2s;
-        -webkit-animation: animation-forward 0.2s ease forwards;
-        -moz-animation: animation-forward 0.2s ease forwards;
-        animation: animation-forward 0.2s ease forwards;
-    }
+    @extend %link;
 }
 
 .link-bar {
