--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -542,7 +542,207 @@
   margin: 5em;
 }
 
-.flex, .box, .link-row, .center, .banner, .button, .button-expand-1, .button-expand-2, .button-expand-3 {
+.shadow-1, .box, .inline-box, .link, .dark.link {
+  box-shadow: gray 0px 0px 3px 0px;
+}
+
+.shadow-up-1 {
+  box-shadow: gray 0px -1px 3px 0px;
+}
+
+.shadow-down-1 {
+  box-shadow: gray 0px 1px 3px 0px;
+}
+
+.shadow-right-1 {
+  box-shadow: gray 1px 0px 3px 0px;
+}
+
+.shadow-left-1 {
+  box-shadow: gray -1px 0px 3px 0px;
+}
+
+.shadow-2 {
+  box-shadow: gray 0px 0px 4px 0px;
+}
+
+.shadow-up-2 {
+  box-shadow: gray 0px -2px 4px 0px;
+}
+
+.shadow-down-2 {
+  box-shadow: gray 0px 2px 4px 0px;
+}
+
+.shadow-right-2 {
+  box-shadow: gray 2px 0px 4px 0px;
+}
+
+.shadow-left-2 {
+  box-shadow: gray -2px 0px 4px 0px;
+}
+
+.shadow-3, .banner, .button {
+  box-shadow: gray 0px 0px 5px 0px;
+}
+
+.shadow-up-3 {
+  box-shadow: gray 0px -3px 5px 0px;
+}
+
+.shadow-down-3 {
+  box-shadow: gray 0px 3px 5px 0px;
+}
+
+.shadow-right-3 {
+  box-shadow: gray 3px 0px 5px 0px;
+}
+
+.shadow-left-3 {
+  box-shadow: gray -3px 0px 5px 0px;
+}
+
+.shadow-4 {
+  box-shadow: gray 0px 0px 6px 0px;
+}
+
+.shadow-up-4 {
+  box-shadow: gray 0px -4px 6px 0px;
+}
+
+.shadow-down-4 {
+  box-shadow: gray 0px 4px 6px 0px;
+}
+
+.shadow-right-4 {
+  box-shadow: gray 4px 0px 6px 0px;
+}
+
+.shadow-left-4 {
+  box-shadow: gray -4px 0px 6px 0px;
+}
+
+.shadow-5, .button:hover {
+  box-shadow: gray 0px 0px 7px 0px;
+}
+
+.shadow-up-5 {
+  box-shadow: gray 0px -5px 7px 0px;
+}
+
+.shadow-down-5 {
+  box-shadow: gray 0px 5px 7px 0px;
+}
+
+.shadow-right-5 {
+  box-shadow: gray 5px 0px 7px 0px;
+}
+
+.shadow-left-5 {
+  box-shadow: gray -5px 0px 7px 0px;
+}
+
+.shadow-inset-1 {
+  box-shadow: gray 0px 0px 3px 0px inset;
+}
+
+.shadow-inset-up-1 {
+  box-shadow: gray 0px -1px 3px 0px inset;
+}
+
+.shadow-inset-down-1 {
+  box-shadow: gray 0px 1px 3px 0px inset;
+}
+
+.shadow-inset-right-1 {
+  box-shadow: gray 1px 0px 3px 0px inset;
+}
+
+.shadow-inset-left-1 {
+  box-shadow: gray -1px 0px 3px 0px inset;
+}
+
+.shadow-inset-2 {
+  box-shadow: gray 0px 0px 4px 0px inset;
+}
+
+.shadow-inset-up-2 {
+  box-shadow: gray 0px -2px 4px 0px inset;
+}
+
+.shadow-inset-down-2 {
+  box-shadow: gray 0px 2px 4px 0px inset;
+}
+
+.shadow-inset-right-2 {
+  box-shadow: gray 2px 0px 4px 0px inset;
+}
+
+.shadow-inset-left-2 {
+  box-shadow: gray -2px 0px 4px 0px inset;
+}
+
+.shadow-inset-3, .button.active, .button:active {
+  box-shadow: gray 0px 0px 5px 0px inset;
+}
+
+.shadow-inset-up-3 {
+  box-shadow: gray 0px -3px 5px 0px inset;
+}
+
+.shadow-inset-down-3 {
+  box-shadow: gray 0px 3px 5px 0px inset;
+}
+
+.shadow-inset-right-3 {
+  box-shadow: gray 3px 0px 5px 0px inset;
+}
+
+.shadow-inset-left-3 {
+  box-shadow: gray -3px 0px 5px 0px inset;
+}
+
+.shadow-inset-4 {
+  box-shadow: gray 0px 0px 6px 0px inset;
+}
+
+.shadow-inset-up-4 {
+  box-shadow: gray 0px -4px 6px 0px inset;
+}
+
+.shadow-inset-down-4 {
+  box-shadow: gray 0px 4px 6px 0px inset;
+}
+
+.shadow-inset-right-4 {
+  box-shadow: gray 4px 0px 6px 0px inset;
+}
+
+.shadow-inset-left-4 {
+  box-shadow: gray -4px 0px 6px 0px inset;
+}
+
+.shadow-inset-5, .button.active:hover {
+  box-shadow: gray 0px 0px 7px 0px inset;
+}
+
+.shadow-inset-up-5 {
+  box-shadow: gray 0px -5px 7px 0px inset;
+}
+
+.shadow-inset-down-5 {
+  box-shadow: gray 0px 5px 7px 0px inset;
+}
+
+.shadow-inset-right-5 {
+  box-shadow: gray 5px 0px 7px 0px inset;
+}
+
+.shadow-inset-left-5 {
+  box-shadow: gray -5px 0px 7px 0px inset;
+}
+
+.flex, .link-row, .inline-box, .link, .dark.link, .box, .center, .banner, .button, .button-expand-1, .button-expand-2, .button-expand-3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -768,6 +968,18 @@
   flex-grow: 5;
 }
 
+.box {
+  min-width: 5em;
+  min-height: 5em;
+  border-radius: 3px;
+}
+
+.inline-box, .link, .dark.link {
+  min-width: 5em;
+  min-height: fit-content;
+  border-radius: 3px;
+}
+
 p, .text, .link {
   font-size: 1rem;
   margin: 0.5em 0em;
@@ -911,229 +1123,29 @@ h4, .h4-text {
     font-weight: normal;
   }
 }
-.shadow-1, .box {
-  box-shadow: gray 0px 0px 3px 0px;
-}
-
-.shadow-up-1 {
-  box-shadow: gray 0px -1px 3px 0px;
-}
-
-.shadow-down-1 {
-  box-shadow: gray 0px 1px 3px 0px;
-}
-
-.shadow-right-1 {
-  box-shadow: gray 1px 0px 3px 0px;
-}
-
-.shadow-left-1 {
-  box-shadow: gray -1px 0px 3px 0px;
-}
-
-.shadow-2 {
-  box-shadow: gray 0px 0px 4px 0px;
-}
-
-.shadow-up-2 {
-  box-shadow: gray 0px -2px 4px 0px;
-}
-
-.shadow-down-2 {
-  box-shadow: gray 0px 2px 4px 0px;
-}
-
-.shadow-right-2 {
-  box-shadow: gray 2px 0px 4px 0px;
-}
-
-.shadow-left-2 {
-  box-shadow: gray -2px 0px 4px 0px;
-}
-
-.shadow-3, .banner, .button {
-  box-shadow: gray 0px 0px 5px 0px;
-}
-
-.shadow-up-3 {
-  box-shadow: gray 0px -3px 5px 0px;
-}
-
-.shadow-down-3 {
-  box-shadow: gray 0px 3px 5px 0px;
-}
-
-.shadow-right-3 {
-  box-shadow: gray 3px 0px 5px 0px;
-}
-
-.shadow-left-3 {
-  box-shadow: gray -3px 0px 5px 0px;
-}
-
-.shadow-4 {
-  box-shadow: gray 0px 0px 6px 0px;
-}
-
-.shadow-up-4 {
-  box-shadow: gray 0px -4px 6px 0px;
-}
-
-.shadow-down-4 {
-  box-shadow: gray 0px 4px 6px 0px;
-}
-
-.shadow-right-4 {
-  box-shadow: gray 4px 0px 6px 0px;
-}
-
-.shadow-left-4 {
-  box-shadow: gray -4px 0px 6px 0px;
-}
-
-.shadow-5, .button:hover {
-  box-shadow: gray 0px 0px 7px 0px;
-}
-
-.shadow-up-5 {
-  box-shadow: gray 0px -5px 7px 0px;
-}
-
-.shadow-down-5 {
-  box-shadow: gray 0px 5px 7px 0px;
-}
-
-.shadow-right-5 {
-  box-shadow: gray 5px 0px 7px 0px;
-}
-
-.shadow-left-5 {
-  box-shadow: gray -5px 0px 7px 0px;
-}
-
-.shadow-inset-1 {
-  box-shadow: gray 0px 0px 3px 0px inset;
-}
-
-.shadow-inset-up-1 {
-  box-shadow: gray 0px -1px 3px 0px inset;
-}
-
-.shadow-inset-down-1 {
-  box-shadow: gray 0px 1px 3px 0px inset;
-}
-
-.shadow-inset-right-1 {
-  box-shadow: gray 1px 0px 3px 0px inset;
-}
-
-.shadow-inset-left-1 {
-  box-shadow: gray -1px 0px 3px 0px inset;
-}
-
-.shadow-inset-2 {
-  box-shadow: gray 0px 0px 4px 0px inset;
-}
-
-.shadow-inset-up-2 {
-  box-shadow: gray 0px -2px 4px 0px inset;
-}
-
-.shadow-inset-down-2 {
-  box-shadow: gray 0px 2px 4px 0px inset;
-}
-
-.shadow-inset-right-2 {
-  box-shadow: gray 2px 0px 4px 0px inset;
-}
-
-.shadow-inset-left-2 {
-  box-shadow: gray -2px 0px 4px 0px inset;
-}
-
-.shadow-inset-3, .button.active, .button:active {
-  box-shadow: gray 0px 0px 5px 0px inset;
-}
-
-.shadow-inset-up-3 {
-  box-shadow: gray 0px -3px 5px 0px inset;
-}
-
-.shadow-inset-down-3 {
-  box-shadow: gray 0px 3px 5px 0px inset;
-}
-
-.shadow-inset-right-3 {
-  box-shadow: gray 3px 0px 5px 0px inset;
-}
-
-.shadow-inset-left-3 {
-  box-shadow: gray -3px 0px 5px 0px inset;
-}
-
-.shadow-inset-4 {
-  box-shadow: gray 0px 0px 6px 0px inset;
-}
-
-.shadow-inset-up-4 {
-  box-shadow: gray 0px -4px 6px 0px inset;
-}
-
-.shadow-inset-down-4 {
-  box-shadow: gray 0px 4px 6px 0px inset;
-}
-
-.shadow-inset-right-4 {
-  box-shadow: gray 4px 0px 6px 0px inset;
-}
-
-.shadow-inset-left-4 {
-  box-shadow: gray -4px 0px 6px 0px inset;
-}
-
-.shadow-inset-5, .button.active:hover {
-  box-shadow: gray 0px 0px 7px 0px inset;
-}
-
-.shadow-inset-up-5 {
-  box-shadow: gray 0px -5px 7px 0px inset;
-}
-
-.shadow-inset-down-5 {
-  box-shadow: gray 0px 5px 7px 0px inset;
-}
-
-.shadow-inset-right-5 {
-  box-shadow: gray 5px 0px 7px 0px inset;
-}
-
-.shadow-inset-left-5 {
-  box-shadow: gray -5px 0px 7px 0px inset;
-}
-
-.gradient, .gradient-hover-animation, .dark.gradient-hover-animation:not(.button) {
+.gradient, .gradient-hover-animation, .dark.gradient-hover-animation:not(.button), .link, .dark.link {
   background: linear-gradient(135deg, #ffffff00, #d7d7d7 25%, #ffffff00);
 }
 
-.dark.gradient, .button-expand-1 > *.gradient-hover-animation.dark, .button-expand-2 > *.gradient-hover-animation.dark, .button-expand-3 > *.gradient-hover-animation.dark, .dark.gradient-hover-animation:not(.button) {
+.dark.gradient, .button-expand-1 > *.gradient-hover-animation.dark, .button-expand-2 > *.gradient-hover-animation.dark, .button-expand-3 > *.gradient-hover-animation.dark, .dark.gradient-hover-animation:not(.button), .dark.link {
   background: linear-gradient(135deg, #00000000, #282828 25%, #00000000);
 }
 
-.gradient-hover-animation, .dark.gradient-hover-animation:not(.button) {
+.gradient-hover-animation, .dark.gradient-hover-animation:not(.button), .link, .dark.link {
   background-size: 200% 200%;
   -webkit-animation: animation-back 0.2s ease forwards;
   -moz-animation: animation-back 0.2s ease forwards;
   animation: animation-back 0.2s ease forwards;
 }
 
-.dark.gradient-hover-animation:not(.button) {
+.dark.gradient-hover-animation:not(.button), .dark.link {
   background-size: 200% 200%;
   -webkit-animation: animation-back 0.2s ease forwards;
   -moz-animation: animation-back 0.2s ease forwards;
   animation: animation-back 0.2s ease forwards;
 }
 
-.gradient-hover-animation:hover, .dark.gradient-hover-animation:hover:not(.button) {
+.gradient-hover-animation:hover, .dark.gradient-hover-animation:hover:not(.button), .link:hover {
   -webkit-animation: animation-forward 0.2s ease forwards;
   -moz-animation: animation-forward 0.2s ease forwards;
   animation: animation-forward 0.2s ease forwards;
@@ -1374,47 +1386,23 @@ h4, .h4-text {
     background-position: 0% 0%;
   }
 }
-.dark.link {
-  background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
-  color: #c3c3c3;
-  background-size: 200% 200%;
-  transition: margin 0.2s, width 0.2s, height 0.2s;
-  -webkit-animation: animation-back 0.2s ease forwards;
-  -moz-animation: animation-back 0.2s ease forwards;
-  animation: animation-back 0.2s ease forwards;
-}
-.dark.link:hover {
-  color: white;
-  transition: width 0.2s, height 0.2s;
-  -webkit-animation: animation-forward 0.2s ease forwards;
-  -moz-animation: animation-forward 0.2s ease forwards;
-  animation: animation-forward 0.2s ease forwards;
-}
-
-.link {
+.link, .dark.link {
   padding: 0.25em;
-  min-width: 5em;
   text-align: center;
-  border-radius: 3px;
-  margin-top: 0.5em;
   text-decoration: none;
   color: #3c3c3c;
   cursor: pointer;
-  background: linear-gradient(135deg, #ffffff00, #e9e9e980 25%, #ffffff00);
-  box-shadow: #999 0px 0px 3px 0px;
-  background-size: 200% 200%;
-  transition: width 0.2s, height 0.2s;
-  -webkit-animation: animation-back 0.2s ease forwards;
-  -moz-animation: animation-back 0.2s ease forwards;
-  animation: animation-back 0.2s ease forwards;
 }
 .link:hover {
   color: black;
   text-decoration: none;
-  transition: width 0.2s, height 0.2s;
-  -webkit-animation: animation-forward 0.2s ease forwards;
-  -moz-animation: animation-forward 0.2s ease forwards;
-  animation: animation-forward 0.2s ease forwards;
+}
+
+.dark.link {
+  color: #c3c3c3;
+}
+.dark.link:hover {
+  color: white;
 }
 
 .link-bar {
@@ -1554,12 +1542,6 @@ body {
   position: absolute;
   width: 100vw;
   min-height: 100vh;
-}
-
-.box {
-  min-width: 5em;
-  min-height: 5em;
-  border-radius: 3px;
 }
 
 .no-shadow {
